# brkraw

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: Addons-and-Plugins.md  CLI-addon.md  CLI-config.md  CLI-info_and_params.md  CLI-set_unset_and_env.md  CLI-tonii_and_tonii_all.md  Config.md  Getting-Started.md  Python-API.md  RULE-Syntax.md  SPEC-Syntax.md  index.md
docs/api/: API-Addon.md  API-Output-Format.md  API-Pruner.md
docs/cli/: CLI-addon.md  CLI-config.md  CLI-info_and_params.md  CLI-prune.md  CLI-set_unset_and_env.md  CLI-tonii_and_tonii_all.md
schema/: remapper.yaml
src/brkraw/: __init__.py
src/brkraw/apps/addon/: __init__.py  core.py
src/brkraw/apps/loader/: core.py  helper.py  types.py
src/brkraw/apps/loader/info/: scan.py  scan.yaml  study.py  study.yaml
src/brkraw/cli/: main.py  utils.py
src/brkraw/cli/commands/: addon.py  config.py  env.py  init.py  prune.py  session.py  tonii.py
src/brkraw/core/: __init__.py  config.py  formatter.py  output_format.py  parameters.py
src/brkraw/core/converter/: __init__.py  validator.py
src/brkraw/core/remapper/: __init__.py  validator.py
src/brkraw/core/rules/: __init__.py  logic.py  validator.py
src/brkraw/resolver/: affine.py  nifti.py
src/brkraw/schema/: map.yaml  meta.yaml  pruner.yaml  remapper.yaml  rules.yaml
src/brkraw/specs/converter/: __init__.py  logic.py  validator.py
src/brkraw/specs/meta/: validator.py
src/brkraw/specs/pruner/: logic.py  validator.py
src/brkraw/specs/remapper/: __init__.py  logic.py  validator.py
src/brkraw/specs/rules/: logic.py  validator.py
tests/test_core/: test_parameters.py
(+5 files in other folders)
