[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "brkraw"
dynamic = ["version"]
description = "Bruker PvDataset Loader"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Natural Language :: English',
]
dependencies = [
    "numpy",
    "nibabel",
    "PyYAML",
    "jsonschema",
    "typing_extensions",
]
license = {text = "GNLv3"}
maintainers = [
    {name = "SungHo Lee", email = 'shlee@unc.edu'}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    'bruker', 
    'data_handler', 
    'converter', 
    'administrator_tool', 
    'extensible', 
]

[project.urls]
Homepage = "https://brkraw.github.io"

[project.scripts]
brkraw = "brkraw.cli:main"

[project.entry-points."brkraw.cli"]
addon = "brkraw.cli.commands.addon:register"
config = "brkraw.cli.commands.config:register"
info = "brkraw.cli.commands.info:register"
init = "brkraw.cli.commands.init:register"
session = "brkraw.cli.commands.session:register"
params = "brkraw.cli.commands.params:register"
tonii = "brkraw.cli.commands.tonii:register"
prune = "brkraw.cli.commands.prune:register"

[project.optional-dependencies]
plugin = ["jsonschema"]
full = ["brkraw[plugin]"]
minimal = []

[tool.hatch.version]
path = "src/brkraw/__init__.py"
style = "pep440"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
artifacts = ["LICENSE"]
include = ["src/brkraw/assets/**"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
